fix: alignment of source header in TM details modal on small screens

--- a/server/zanata-frontend/src/frontend/app/editor/containers/SuggestionDetailsModal/index.css
+++ b/server/zanata-frontend/src/frontend/app/editor/containers/SuggestionDetailsModal/index.css
@@ -203,3 +203,10 @@ span.TransUnit-details-inner {
     padding-left:0.375em;
     font-weight:bold;
 }
+
+
+@media (max-width: 740px) {
+  .source-heading {
+    padding-left: 2.1em;
+  }
+}
